src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfig_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfig_StringErrorContext.class */
public final class GLXSGIXFBConfig_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglXGetFBConfigAttribSGIX(JJIJ)I", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        methods.put("glXGetFBConfigAttribSGIX(JJILjava/nio/IntBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        methods.put("nglXChooseFBConfigSGIX(JIJJ)J", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        methods.put("glXChooseFBConfigSGIX(JILjava/nio/IntBuffer;)Lorg/lwjgl/PointerBuffer;", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        methods.put("glXCreateGLXPixmapWithConfigSGIX(JJJ)J", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        methods.put("glXCreateContextWithConfigSGIX(JJIJZ)J", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        methods.put("nglXGetVisualFromFBConfigSGIX(JJ)J", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        methods.put("glXGetVisualFromFBConfigSGIX(JJ)Lorg/lwjgl/system/linux/XVisualInfo;", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        methods.put("nglXGetFBConfigFromVisualSGIX(JJ)J", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        methods.put("glXGetFBConfigFromVisualSGIX(JLorg/lwjgl/system/linux/XVisualInfo;)J", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        methods.put("glXGetFBConfigAttribSGIX(JJI[I)I", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        methods.put("glXChooseFBConfigSGIX(JI[I)Lorg/lwjgl/PointerBuffer;", "net/labymod/core/laby3d/opengl/error/generated/GLXSGIXFBConfigErrorContext");
        return methods;
    }
}
